--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "^5.0.0",
     "react-slider": "^2.0.4",
     "react-uuid": "^1.0.2",
+    "react-whatsapp-chat-widget": "^1.1.6",
     "styled-components": "^6.0.7",
     "swiper": "^9.3.2",
     "web-vitals": "^2.1.2"
